<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/pixel_google"
                android:contentDescription="@string/deskripsiGambar" />
            <TextView
                style="@style/TextContent.Small.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/jumlah_poto"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="#4D000000"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="bottom"
                app:drawableStartCompat="@drawable/ic_collections_white_18dp" />
        </FrameLayout>
        <TextView
            style="@style/TextContent"
            android:textSize="32sp"
            android:text="@string/harga"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/stock"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/TextContent"
            android:text="@string/content_text"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/spesifikasi"
            android:layout_marginBottom="8dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tittle_battery"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery"/>
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/seller"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/photo_2" />

            <TextView
                style="@style/TextContent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_name" />
        </RelativeLayout>

        <Button
            style="@style/ButtonGeneral"
            android:text="@string/dummy_photos"/>
    </LinearLayout>

</ScrollView>